cilium-cli/connectivity/manifests/client-egress-to-fqdns-one-one-one-one.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: cilium-test
  name: client-egress-to-fqdns-one-one-one-one
spec:
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/"
    toFQDNs:
    - matchName: "one.one.one.one"
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
    toEndpoints:
    - matchExpressions:
        - { key: 'k8s-app', operator: In, values: [ "kube-dns", "coredns", "node-local-dns" ] }
        - { key: 'io.kubernetes.pod.namespace', operator: In, values: [ "kube-system" ] }
